--- a/Causual Impact Mining file.Rmd
+++ b/Causual Impact Mining file.Rmd
@@ -1,6 +1,7 @@
 ---
-title: "R Notebook"
-output: html_notebook
+title: "Causal Impact Notebook 2"
+output: pdf_document
+  
 ---
 
 # Load Packages
